🚀 feat: search highlights
- Use Elasticsearch highlights on queries
- Render highlighted results on frontend

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .search-highlights > em {
+    /* search jesults highlight tags */
+    @apply rounded bg-indigo-100  px-[2px] not-italic dark:bg-indigo-900;
+  }
+}
