--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,4 +7,9 @@
     /* search jesults highlight tags */
     @apply rounded bg-indigo-100  px-[2px] not-italic dark:bg-indigo-900;
   }
+
+  .suggestion-highlight > bold {
+    /* "Did you mean" suggestion highlight*/
+    @apply font-bold;
+  }
 }
