--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
     @apply rounded bg-indigo-100  px-[2px] not-italic dark:bg-indigo-900;
   }
 
-  .suggestion-highlight > bold {
+  .suggestion-highlight > em {
     /* "Did you mean" suggestion highlight*/
     @apply font-bold;
   }
