--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply scrollbar-thin scrollbar-thumb-foreground;
+  }
+}
+
 @layer utilities {
   .search-highlights > em {
     /* search results highlight tags */
